Game loads on page load

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
         <script src="js/Grid.js"></script>
         <script src="js/keyboardManager.js"></script>
     </head>
-    <body>
+    <body onload="new GameManager(4)">
         <div>
             <div class="title">
                 <h1>2018</h1>   
             </div>
             
-            <button onclick="main()" value="Start 2048 Game">Start 2048 Game</button>
         </div>
     </body>
 </html>
