--- a/index.html
+++ b/index.html
@@ -2,17 +2,52 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="2048.css">
+        <title>2048 Clone</title>
         <script src="js/Tile.js"></script>
         <script src="js/GameManager.js"></script>
         <script src="js/Grid.js"></script>
         <script src="js/keyboardManager.js"></script>
+        <script src="js/HTMLGenerator.js"></script>
+        <script src="js/GameScoreManager.js"></script>
     </head>
     <body onload="new GameManager(4)">
-        <div>
-            <div class="title">
-                <h1>2018</h1>   
+        <div id="container">
+            <!-- Title Header Section -->
+            <div id="header">
+                <h1 class="title">2048</h1>
+                <div class="scoresContainer">
+                    <div class="movesContainer">
+                        <div>Moves</div>
+                        <div id="movesContainerBottom">15</div>
+                    </div>
+                    <div class="scoreContainer">
+                        <div>Score</div>
+                        <div id="scoreContainerResult">132</div>
+                    </div>
+                </div>
+            </div>
+            <br/>
+
+            <!-- Game Section -->
+            <div id="game-container">
+                <div id="grid-container"></div>
             </div>
             
+            <!-- Bottom Section -->
+            <div id="buttons">
+                <!-- Start Button -->
+                <div id="start">
+                    <a class="button" id="startButton">Start</a>
+                </div>
+                <div id="resize">
+                    <div class="resizeInput">
+                        <p>n : <input type="text" id="nParam" value="4"></p>
+                    </div>
+                    <div class="resizeInput">
+                        <a class="button" id="resizeButton">Resize</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
