added jquery library to try and make a nice smooth transition an fixed the moves container and score container boxes>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/Grid.js"></script>
         <script src="js/HTMLGenerator.js"></script>
         <script src="js/GameScoreManager.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body onload="new GameManager(4)">
         <div id="container">
@@ -17,11 +18,11 @@
                 <div class="scoresContainer">
                     <div class="movesContainer">
                         <div>Moves</div>
-                        <div id="movesContainerBottom">15</div>
+                        <div id="movesContainerBottom">0</div>
                     </div>
                     <div class="scoreContainer">
                         <div>Score</div>
-                        <div id="scoreContainerResult">132</div>
+                        <div id="scoreContainerResult">0</div>
                     </div>
                 </div>
             </div>
