changement de Restart -> Try again

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div id="gameOver" class="messageBox">
                 <p>Game Over!</p>
-                <a class="button" id="restartButtonGameOver">Restart</a>
+                <a class="button" id="restartButtonGameOver">Try again</a>
             </div>
         </div>
     </body>
