ajout du bouton winner

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <p>Game Over!</p>
                 <a class="button" id="restartButtonGameOver">Try again</a>
             </div>
+            <div id="winner" class="messageBox">
+                <p>Congratulations!</p>
+                <a class="button" id="restartButtonWinner">Play again</a>
+            </div>
         </div>
     </body>
 </html>
