changed the href of the styleshee reference of the 2048.css stylesheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="2048.css">
+        <link rel="stylesheet" type="text/css" href="style/2048.css">
         <title>2048 Clone</title>
         <script src="js/Tile.js"></script>
         <script src="js/GameManager.js"></script>
